src/GeositeFramework/css/app.css
/* ... */
.view-left #left-pane,
.view-right #right-pane,
.view-split .content {
    display: block;
}
.view-split .content {
    width: 50%;
}

/* -----------------------------------------
   Content Area - Sidebar
----------------------------------------- */
    .content .sidebar {
        width: 85px;
        height: 100%;
        background: #333;
        position: relative;
        float: left;

        box-shadow: 0 0 20px #666;
        box-shadow: 0 0 20px rgba(0,0,0,.5);
        z-index: 9;
        }
        .content .sidebar ul.side-nav {
            padding: 0;
            }
            .content .sidebar ul.side-nav li {
                margin: 0;
                }
                .content .sidebar ul.side-nav li:hover a {
                    background: #222;
                    color: #FFF;
                }
                .content .sidebar ul.side-nav li a {
                    text-align: center;
                    color: #939598;
                    min-height: 75px;
                    padding: 8px 0 8px;
                    font-size: 12px;
                    font-weight: 700;
                    line-height: 16px;
                }
            .content .sidebar ul.side-nav.top {
                overflow: hidden;
                box-shadow: 0 0 15px black inset;
            }
            .content .sidebar ul.side-nav.top li {
                border-bottom: #808285 solid 1px;
                }
                .content .sidebar ul.side-nav.top li:last-child {
                    border-bottom: none;
                }
                .content .sidebar ul.side-nav.top li.active a {
                    background: -moz-linear-gradient(top, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%);
                    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0)));
                    background: -webkit-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);
                    background: -o-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);
                    background: -ms-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);
                    background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);
                    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 );
                    color: #FFF;
                }
        
        .content .sidebar ul.side-nav.bottom {
            position: absolute;
            bottom: 0;
            background: #444;
            }
            .content .sidebar ul.side-nav.bottom > li.divider {
                border-top: #808285 solid 1px;
            }
            
        .content .sidebar img.icon {
            width: 32px;
            height: 32px;
            display: block;
            margin: 0 auto 7px;
            border: none;
            color: transparent;
        }
    .content .plugin-container-outer {
        position: absolute;
        border: 5px #444 solid;
        border-radius: 5px;
        background: #FFFFFF;
        z-index: 100;
        box-shadow: 0 0 15px #333;
        box-shadow: 0 0 15px rgba(0,0,0,.5);
        }

    .content .plugin-container {
        width: 100%;
        height: 100%;
        overflow: visible;
        }
        .content .plugin-container-outer.resizable .plugin-container {
            padding-bottom: 28px; /* reduces inner container's 100% height by header's height */
        }
        .content .plugin-container-header {
            height: 28px;
            padding: 5px 8px;
            background: #444;
            overflow: hidden;
            cursor: move;
            }
            .content .plugin-container-header h6 {
                float: left;
                margin: 0;
                color: white;
            }
            .content .plugin-container-header a,
            .content .legend .legend-header a {  
                float: right;
                color: #CCC;
                font-weight: bold;
                padding: 6px;
                position: relative;
                top: -6px;
                right: -8px;
                width: 26px;
                text-align: center;
                border-radius: 4px;
                }
                .content .plugin-container-header a.plugin-off {
                    border-left: 1px solid #666;
                }
                .content .plugin-container-header a:hover,
                .content .legend .legend-header a:hover {  
                    background: black;
                    color: white;
                }

        .content .plugin-container-inner {
            height: 100%; 
            padding-top: 2px;
            overflow: auto;
        }

        .content .plugin-infographic {
            text-align: right;
            display: none;
        }

        .content .plugin-infographic .graphic {
            display: block;
        }

        .content  .plugin-infographic label {
            display: inline;
        }

.tinner .tclose {
    font-size: 14px;
    padding: 6px;
    right: 26px;
}

.tclose {
    position: absolute;
    top: 20px;
    right: 24px;
    cursor: pointer;
    padding: 6px;
    background: #FFF;
    border-radius: 4px;
    color: #CCC;
    font-weight: 700;
    z-index: 99;
    height: 24px;
    line-height: 10px;
    width: 24px;
    }
    .tclose:hover {
        background: #F1F2F2;
        color: #333;
    }

.tcontent h3 {
    margin-top: 4px;
}

       

/* -----------------------------------------
   Content Area - Map
----------------------------------------- */

    .content .map-outer {
        width: 100%;
        height: 100%;
        margin-left: 85px;
        margin-left: 0;
        display: inline-block;
        position: absolute;
    }        
/* ... */

